--- a/lab1.html
+++ b/lab1.html
@@ -44,7 +44,7 @@
         <p>Diploma in Information Technology - 3rd Year</p>
     </header>
     <div class="container">
-        <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=e99d92&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_ht=scontent.fcgy2-1.fna&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Profile Image">
+        <img src="sarno.jpeg" alt="Profile Image">
         <p>I am an IT student passionate about technology and innovation. I love creating solutions that improve lives through coding and design.</p>
         <h2>Skills</h2>
         <div class="skills">
