--- a/lab2.html
+++ b/lab2.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <aside>
-    <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?_nc_cat=107&_nc_sid=e99d92&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_ht=scontent.fcgy2-1.fna&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Floregen">
+    <img src="sarno.jpeg" alt="Floregen">
     <h1>Floregen Sarno</h1>
     <p>3rd Year DIT Student<br>DSSC / CCET</p>
   </aside>
