--- a/lab1.html
+++ b/lab1.html
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sarno_Floregen_Lab1</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            background: #f4f4f9;
-            text-align: center;
-        }
-        header {
-            background: #ff7f50;
-            color: white;
-            padding: 20px 0;
-        }
-        img {
-            width: 150px;
-            border-radius: 50%;
-            margin-top: 10px;
-        }
-        .container { padding: 20px; }
-        .skills {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            flex-wrap: wrap;
-        }
-        .skill-card {
-            background: #ffb6b9;
-            padding: 10px 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-        }
-        blockquote { font-style: italic; margin: 20px auto; max-width: 500px; }
-        footer { margin-top: 20px; color: #777; }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sarno_Floregen_Lab1</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f4f4f9;
+      text-align: center;
+    }
+    header {
+      background: #ff7f50;
+      color: white;
+      padding: 20px 0;
+    }
+    img {
+      width: 150px;
+      height: 150px;          /* ensures square shape */
+      border-radius: 50%;     /* makes it circular */
+      object-fit: cover;      /* prevents stretching */
+      margin-top: 10px;
+      border: 3px solid white; /* optional: adds a neat white border */
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2); /* subtle shadow */
+    }
+    .container { padding: 20px; }
+    .skills {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      flex-wrap: wrap;
+    }
+    .skill-card {
+      background: #ffb6b9;
+      padding: 10px 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    blockquote { 
+      font-style: italic; 
+      margin: 20px auto; 
+      max-width: 500px; 
+    }
+    footer { 
+      margin-top: 20px; 
+      color: #777; 
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Floregen T. Sarno</h1>
-        <p>Diploma in Information Technology - 3rd Year</p>
-    </header>
-    <div class="container">
-        <img src="sarno.jpeg" alt="Profile Image">
-        <p>I am an IT student passionate about technology and innovation. I love creating solutions that improve lives through coding and design.</p>
-        <h2>Skills</h2>
-        <div class="skills">
-            <div class="skill-card">HTML</div>
-            <div class="skill-card">CSS</div>
-            <div class="skill-card">JavaScript</div>
-            <div class="skill-card">PHP</div>
-        </div>
-        <h2>Favorite Quote</h2>
-        <blockquote>"If you can dream it, you can achieve it."</blockquote>
-        <footer>© 2025 Floregen T. Sarno</footer>
+  <header>
+    <h1>Floregen T. Sarno</h1>
+    <p>Diploma in Information Technology - 3rd Year</p>
+  </header>
+  <div class="container">
+    <img src="sarno.jpeg" alt="Profile Image">
+    <p>I am an IT student passionate about technology and innovation. I love creating solutions that improve lives through coding and design.</p>
+    <h2>Skills</h2>
+    <div class="skills">
+      <div class="skill-card">HTML</div>
+      <div class="skill-card">CSS</div>
+      <div class="skill-card">JavaScript</div>
+      <div class="skill-card">PHP</div>
     </div>
+    <h2>Favorite Quote</h2>
+    <blockquote>"If you can dream it, you can achieve it."</blockquote>
+    <footer>© 2025 Floregen T. Sarno</footer>
+  </div>
 </body>
 </html>
