--- a/lab2.html
+++ b/lab2.html
@@ -4,32 +4,70 @@
   <meta charset="UTF-8">
   <title>Lab 2 - Floregen Sarno</title>
   <style>
-    body { display: flex; margin: 0; font-family: Arial; background: #faf3f0; }
+    body {
+      display: flex;
+      margin: 0;
+      font-family: Arial;
+      background: #faf3f0;
+    }
     aside {
-      width: 30%; background: #333; color: white; text-align: center; padding: 20px;
+      width: 30%;
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
-    aside img { width: 100px; border-radius: 50%; }
-    main { flex: 1; padding: 20px; }
+    aside img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+    main {
+      flex: 1;
+      padding: 20px;
+    }
     section {
-      background: #ffe5ec; margin-bottom: 20px; padding: 15px; border-radius: 10px;
+      background: #ffe5ec;
+      margin-bottom: 20px;
+      padding: 15px;
+      border-radius: 15px;
     }
-    h2 { color: #ff7f50; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { border: 1px solid #aaa; padding: 8px; text-align: center; }
-    th { background: #ff7f50; color: white; }
+    h2 {
+      color: #ff7f50;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #aaa;
+      padding: 8px;
+      text-align: center;
+    }
+    th {
+      background: #ff7f50;
+      color: white;
+    }
     footer {
-      background: #333; color: white; text-align: center; padding: 10px;
+      background: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
   <aside>
-    <img src="sarno.jpeg" alt="Floregen">
+    <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?_nc_cat=107&_nc_sid=e99d92&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_ht=scontent.fcgy2-1.fna&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Floregen">
     <h1>Floregen Sarno</h1>
     <p>3rd Year DIT Student<br>DSSC / CCET</p>
   </aside>
   <main>
-    <section><h2>About Me</h2><p>I am a passionate IT student who believes learning never stops.</p></section>
+    <section>
+      <h2>About Me</h2>
+      <p>I am a passionate IT student who believes learning never stops.</p>
+    </section>
     <section>
       <h2>My Skills</h2>
       <table>
@@ -40,8 +78,14 @@
         <tr><td>Database</td><td>Average</td></tr>
       </table>
     </section>
-    <section><h2>Goal</h2><p>To become a skilled developer and designer after graduation.</p></section>
+    <section>
+      <h2>Goal</h2>
+      <p>To become a skilled developer and designer after graduation.</p>
+    </section>
   </main>
-  <footer>Contact me: <a href="mailto:genasarno03@gmail.com" style="color:white;">Email</a></footer>
+  <footer>
+    Contact me:
+    <a href="mailto:genasarno03@gmail.com" style="color:white;">Email</a>
+  </footer>
 </body>
 </html>
