--- a/lab3.html
+++ b/lab3.html
@@ -6,34 +6,54 @@
   <title>Lab 3 - Hover Card</title>
   <style>
     body {
-      display: flex; justify-content: center; align-items: center;
-      min-height: 100vh; background: #fff4f2; font-family: Arial;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: #fff4f2;
+      font-family: Arial;
     }
     .card {
-      width: 250px; text-align: center; background: white;
-      border-radius: 12px; padding: 20px;
+      width: 250px;
+      height: 250px;
+      background: white;
+      border-radius: 50%;
+      padding: 20px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.15);
       transition: transform 0.3s, box-shadow 0.3s;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
     .card:hover {
       transform: translateY(-8px);
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     }
     .card img {
-      width: 120px; height: 120px; border-radius: 50%; object-fit: cover;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      object-fit: cover;
     }
     .card p {
-      opacity: 0; max-height: 0; overflow: hidden;
+      opacity: 0;
+      max-height: 0;
+      overflow: hidden;
       transition: opacity 0.4s ease, max-height 0.4s ease;
+      font-size: 0.9em;
+      margin-top: 10px;
     }
     .card:hover p {
-      opacity: 1; max-height: 200px;
+      opacity: 1;
+      max-height: 100px;
     }
   </style>
 </head>
 <body>
   <div class="card">
-    <img src="sarno.jpeg" alt="Floregen">
+    <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?_nc_cat=107&_nc_sid=e99d92&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_ht=scontent.fcgy2-1.fna&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Floregen">
     <p>Floregen loves creating simple, interactive designs that communicate ideas clearly.</p>
   </div>
 </body>
