--- a/lab3.html
+++ b/lab3.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?_nc_cat=107&_nc_sid=e99d92&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_ht=scontent.fcgy2-1.fna&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Floregen">
+    <img src="sarno.jpeg" alt="Floregen">
     <p>Floregen loves creating simple, interactive designs that communicate ideas clearly.</p>
   </div>
 </body>
