--- a/lab4.html
+++ b/lab4.html
@@ -63,7 +63,7 @@
 </head>
 <body>
   <div class="profile">
-    <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?_nc_cat=107&_nc_sid=e99d92&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_ht=scontent.fcgy2-1.fna&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Floregen">
+    <img src="sarno.jpeg" alt="Floregen">
     <h2>Floregen Sarno</h2>
     <p>Full Stack Developer in Training</p>
     <button id="aboutBtn">ABOUT ME</button>
