--- a/lab3.html
+++ b/lab3.html
@@ -11,32 +11,43 @@
       align-items: center;
       min-height: 100vh;
       background: #fff4f2;
-      font-family: Arial;
+      font-family: Arial, sans-serif;
     }
+
     .card {
       width: 250px;
       height: 250px;
       background: white;
       border-radius: 50%;
-      padding: 20px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.15);
       transition: transform 0.3s, box-shadow 0.3s;
       text-align: center;
+      position: relative;
+      overflow: hidden;
       display: flex;
       flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: center;
     }
+
     .card:hover {
       transform: translateY(-8px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
     }
+
     .card img {
-      width: 50px;
-      height: 50px;
+      width: 100px;
+      height: 100px;
       border-radius: 50%;
       object-fit: cover;
+      border: 4px solid #fff4f2;
+      transition: transform 0.3s ease;
     }
+
+    .card:hover img {
+      transform: scale(1.1);
+    }
+
     .card p {
       opacity: 0;
       max-height: 0;
@@ -44,7 +55,9 @@
       transition: opacity 0.4s ease, max-height 0.4s ease;
       font-size: 0.9em;
       margin-top: 10px;
+      padding: 0 15px;
     }
+
     .card:hover p {
       opacity: 1;
       max-height: 100px;
