--- a/lab4.html
+++ b/lab4.html
@@ -11,8 +11,9 @@
       align-items: center;
       height: 100vh;
       background: #fff8f2;
-      font-family: Arial;
+      font-family: Arial, sans-serif;
     }
+
     .profile {
       background: white;
       border-radius: 50%;
@@ -22,24 +23,41 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
       text-align: center;
       padding: 20px;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      overflow: hidden;
     }
+
+    .profile:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    }
+
     img {
       width: 100px;
       height: 100px;
       border-radius: 50%;
       object-fit: cover;
+      border: 4px solid #fff8f2;
+      transition: transform 0.3s ease;
     }
+
+    .profile:hover img {
+      transform: scale(1.1);
+    }
+
     h2 {
       margin: 10px 0 5px;
       font-size: 1.2em;
     }
+
     p {
       margin: 0;
       font-size: 0.9em;
     }
+
     button {
       background: #ff7f50;
       border: none;
@@ -48,16 +66,20 @@
       border-radius: 20px;
       cursor: pointer;
       margin-top: 10px;
-      transition: background 0.3s;
+      transition: background 0.3s ease;
     }
+
     button:hover {
       background: #ff6347;
     }
+
     #info {
       display: none;
       margin-top: 8px;
       font-size: 0.85em;
       color: #555;
+      line-height: 1.4em;
+      padding: 0 15px;
     }
   </style>
 </head>
@@ -71,9 +93,12 @@
       <p>I’m a dedicated IT student passionate about innovation and clean design.</p>
     </div>
   </div>
+
   <script>
-    document.getElementById("aboutBtn").addEventListener("click", () => {
-      const info = document.getElementById("info");
+    const btn = document.getElementById("aboutBtn");
+    const info = document.getElementById("info");
+
+    btn.addEventListener("click", () => {
       info.style.display = info.style.display === "block" ? "none" : "block";
     });
   </script>
