--- a/lab4.html
+++ b/lab4.html
@@ -1,105 +1,143 @@
+</body>
+</html>
+scontent.fcgy2-4.fna.fbcdn.net
+lab3
+html
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab 4 - Interactive Profile</title>
+  <title>Simple Hover Card</title>
   <style>
     body {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      background: #fff8f2;
+      min-height: 100vh;
+      background: #f2f2f2;
       font-family: Arial, sans-serif;
     }
 
-    .profile {
-      background: white;
-      border-radius: 50%;
-      width: 260px;
-      height: 260px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+    .card {
+      width: 250px;
       text-align: center;
+      background: #fff;
       padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
-      overflow: hidden;
     }
 
-    .profile:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 18px rgba(0,0,0,0.15);
     }
 
-    img {
-      width: 100px;
-      height: 100px;
+    .card img {
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 4px solid #fff8f2;
-      transition: transform 0.3s ease;
     }
 
-    .profile:hover img {
-      transform: scale(1.1);
+    .card p {
+      margin-top: 15px;
+      color: #333;
+      line-height: 1.4;
+      opacity: 0;
+      max-height: 0;
+      overflow: hidden;
+      transition: opacity 0.3s ease, max-height 0.3s ease;
     }
 
-    h2 {
-      margin: 10px 0 5px;
-      font-size: 1.2em;
+    .card:hover p {
+      opacity: 1;
+      max-height: 100px; /* enough height for text */
+    }
+  </style>
+</head>
+<body>
+  <div class="card">
+    <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=107&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeHQM671JcWS6sR3eVgxJjA4CYTmXcSO_msJhOZdxI7-a2gRlayiulc1llppLnufWPIGAlzn7KVh4uVACdm6MbqT&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_oc=AdkTWfQ0FMfrpzBfitTdDEs1ApWidF9PYl5PgFmHyFKZx0tAPTwopUAs_syp4u9NYak&_nc_zt=24&_nc_ht=scontent.fcgy2-1.fna&_nc_gid=SlQtJ7Fwn2ogKGO6QTnH7w&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Sarno">
+    <p>Passionate about clean UI and accessible web experiences.</p>
+  </div>
+</body>
+</html>
+lab 4
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Activity 2</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f4f9;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
-    p {
-      margin: 0;
-      font-size: 0.9em;
+    .profile {
+      text-align: center;
+      background: white;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+      width: 350px;
+    }
+
+    .profile img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
     }
 
     button {
-      background: #ff7f50;
+      margin-top: 15px;
+      padding: 10px 20px;
       border: none;
+      background: #4CAF50;
       color: white;
-      padding: 8px 16px;
-      border-radius: 20px;
+      font-size: 16px;
+      border-radius: 8px;
       cursor: pointer;
-      margin-top: 10px;
-      transition: background 0.3s ease;
     }
 
     button:hover {
-      background: #ff6347;
+      background: #45a049;
     }
 
     #info {
+      margin-top: 15px;
+    }
+
+    .hide {
       display: none;
-      margin-top: 8px;
-      font-size: 0.85em;
-      color: #555;
-      line-height: 1.4em;
-      padding: 0 15px;
     }
   </style>
 </head>
 <body>
   <div class="profile">
-    <img src="sarno.jpeg" alt="Floregen">
-    <h2>Floregen Sarno</h2>
-    <p>Full Stack Developer in Training</p>
-    <button id="aboutBtn">ABOUT ME</button>
-    <div id="info">
-      <p>I’m a dedicated IT student passionate about innovation and clean design.</p>
+    <img src="sarno.jpeg" alt="HANNAH">
+    <h1>Floregen T. Sarno</h1>
+    <p>I am a Full Stack Developer based on PH.</p>
+
+    <button id="btn-aboutme">ABOUT ME</button>
+
+    <div id="info" class="hide">
+      <p>I am a self made programmer. My passion runs through my blood.</p>
     </div>
   </div>
 
   <script>
-    const btn = document.getElementById("aboutBtn");
-    const info = document.getElementById("info");
-
-    btn.addEventListener("click", () => {
-      info.style.display = info.style.display === "block" ? "none" : "block";
+    document.getElementById("btn-aboutme").addEventListener("click", function() {
+      const info = document.getElementById("info");
+      info.classList.toggle("hide");
     });
   </script>
 </body>
