--- a/lab3.html
+++ b/lab3.html
@@ -1,73 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab 3 - Hover Card</title>
+  <title>My Profile -Floregen Sarno </title>
   <style>
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      background: #fff4f2;
       font-family: Arial, sans-serif;
-    }
-
-    .card {
-      width: 250px;
-      height: 250px;
-      background: white;
-      border-radius: 50%;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-      transition: transform 0.3s, box-shadow 0.3s;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
+      margin: 0;
+      background: #eaf7f7;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
     }
 
-    .card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    aside {
+      width: 30%;
+      background: black;
+      color: white;
+      padding: 20px;
+      text-align: center;
     }
 
-    .card img {
+    aside img {
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      object-fit: cover;
-      border: 4px solid #fff4f2;
-      transition: transform 0.3s ease;
     }
 
-    .card:hover img {
-      transform: scale(1.1);
+    main {
+      flex: 1;
+      padding: 20px;
     }
 
-    .card p {
-      opacity: 0;
-      max-height: 0;
-      overflow: hidden;
-      transition: opacity 0.4s ease, max-height 0.4s ease;
-      font-size: 0.9em;
-      margin-top: 10px;
-      padding: 0 15px;
+    section {
+      background: purple;
+      padding: 15px;
+      margin-bottom: 15px;
+      border-radius: 8px;
     }
 
-    .card:hover p {
-      opacity: 1;
-      max-height: 100px;
+    h2 {
+      color: black;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    th, td {
+      border: 1px solid #aaa;
+      padding: 8px;
+    }
+    th {
+      background: #2d6d6d;
+      color: red;
+    }
+
+    footer {
+      background: #2d6d6d;
+      color: purple;
+      text-align: center;
+      padding: 10px;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <img src="sarno.jpeg" alt="Floregen">
-    <p>Floregen loves creating simple, interactive designs that communicate ideas clearly.</p>
-  </div>
-</body>
-</html>
+
+  <aside>
+    <img src="sarno.jpeg"
+    <h1> Floregen T. Sarno</h1>
+    <p>3nd Year DIT Student<br>DSSC / CCET </p>
+  </aside>
+
+  <main>
+    <section>
+      <h2>About Me</h2>
+      <p>IF YOU CAN DREAM IT, YOU CAN ACHIEVE IT. .</p>
+    </section>
+
+    <section>
+      <h2>My Skills</h2>
+      <table>
+        <tr>
+          <th>Skill</th>
+          <th>Level</th>
+        </tr>
+        <tr>
+          <td>HTML</td>
+          <td>Good</td>
+        </tr>
+        <tr>
+          <td>CSS</td>
+          <td>Average</td>
+        </tr>
+        <tr>
+          <td>Java</td>
+          <td>Average</td>
+        </tr>
+        <tr>
+          <td>Database</td>
+          <td>Average</td>
+        </tr>
+      </table>
+    </section>
+
+    <section>
+      <h2>My Goal</h2>
+      <p> As a student, your goals should focus on academic achievement</p>
+    </section>
+
+    <section>
+      <h2>Favorite Quote</h2>
+      <blockquote>
+        "Keep going, no matter how hard it gets."
+      </blockquote>
+    </section>
+  </main>
+
+  <footer>
+    <p>Contact: <a href="mailto:youremail@example.com" style="color:white;">Email Me</a></p>
+  </footer>
