--- a/lab3.html
+++ b/lab3.html
@@ -1,120 +1,59 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>My Profile -Floregen Sarno </title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background: #eaf7f7;
-      display: flex;
-    }
+    <meta charset="UTF-8">
+    <title>Simple Hover Card</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background: #f2f2f2;
+            font-family: Arial, sans-serif;
+        }
 
-    aside {
-      width: 30%;
-      background: black;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
+        .card {
+            width: 250px;
+            text-align: center;
+            background: #fff;
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            transition: transform 0.3s ease;
+        }
 
-    aside img {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-    }
+        .card:hover {
+            transform: translateY(-5px);
+        }
 
-    main {
-      flex: 1;
-      padding: 20px;
-    }
+        .card img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
 
-    section {
-      background: purple;
-      padding: 15px;
-      margin-bottom: 15px;
-      border-radius: 8px;
-    }
+        .card p {
+            margin-top: 15px;
+            color: #333;
+            line-height: 1.4;
+            opacity: 0;
+            max-height: 0;
+            overflow: hidden;
+            transition: opacity 0.3s ease, max-height 0.3s ease;
+        }
 
-    h2 {
-      color: black;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid #aaa;
-      padding: 8px;
-    }
-    th {
-      background: #2d6d6d;
-      color: red;
-    }
-
-    footer {
-      background: #2d6d6d;
-      color: purple;
-      text-align: center;
-      padding: 10px;
-    }
-  </style>
+        .card:hover p {
+            opacity: 1;
+            max-height: 100px; /* Enough height for text */
+        }
+    </style>
 </head>
 <body>
-
-  <aside>
-    <img src="sarno.jpeg"
-    <h1> Floregen T. Sarno</h1>
-    <p>3nd Year DIT Student<br>DSSC / CCET </p>
-  </aside>
-
-  <main>
-    <section>
-      <h2>About Me</h2>
-      <p>IF YOU CAN DREAM IT, YOU CAN ACHIEVE IT. .</p>
-    </section>
-
-    <section>
-      <h2>My Skills</h2>
-      <table>
-        <tr>
-          <th>Skill</th>
-          <th>Level</th>
-        </tr>
-        <tr>
-          <td>HTML</td>
-          <td>Good</td>
-        </tr>
-        <tr>
-          <td>CSS</td>
-          <td>Average</td>
-        </tr>
-        <tr>
-          <td>Java</td>
-          <td>Average</td>
-        </tr>
-        <tr>
-          <td>Database</td>
-          <td>Average</td>
-        </tr>
-      </table>
-    </section>
-
-    <section>
-      <h2>My Goal</h2>
-      <p> As a student, your goals should focus on academic achievement</p>
-    </section>
-
-    <section>
-      <h2>Favorite Quote</h2>
-      <blockquote>
-        "Keep going, no matter how hard it gets."
-      </blockquote>
-    </section>
-  </main>
-
-  <footer>
-    <p>Contact: <a href="mailto:youremail@example.com" style="color:white;">Email Me</a></p>
-  </footer>
+    <div class="card">
+        <img src="sarno.jpeg" alt="Sarno">
+        <p>Passionate about clean UI and accessible web experiences.</p>
+    </div>
+</body>
+</html>
