--- a/lab4.html
+++ b/lab4.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="https://scontent.fcgy2-1.fna.fbcdn.net/v/t39.30808-1/558827725_1985870832234516_6290776521658639026_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=107&ccb=1-7&_nc_sid=e99d92&_nc_eui2=AeHQM671JcWS6sR3eVgxJjA4CYTmXcSO_msJhOZdxI7-a2gRlayiulc1llppLnufWPIGAlzn7KVh4uVACdm6MbqT&_nc_ohc=nZGsdAvCaNgQ7kNvwEwmyUY&_nc_oc=AdkTWfQ0FMfrpzBfitTdDEs1ApWidF9PYl5PgFmHyFKZx0tAPTwopUAs_syp4u9NYak&_nc_zt=24&_nc_ht=scontent.fcgy2-1.fna&_nc_gid=SlQtJ7Fwn2ogKGO6QTnH7w&oh=00_AfdqXpuxnblM9yJmAHya363M0QnekPCbDyq9ugy72dAN1w&oe=68F3AD1A" alt="Sarno">
+    <img src="sarno.jpeg" alt="Sarno">
     <p>Passionate about clean UI and accessible web experiences.</p>
   </div>
 </body>
